--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "style-loader": "^1.2.1",
-    "webpack-cli": "^6.0.1"
+    "style-loader": "^1.2.1"
   },
   "jest": {
     "moduleNameMapper": {
@@ -51,7 +50,8 @@
     "jest": "^29.7.0",
     "react-test-renderer": "^16.13.1",
     "webpack": "^5.99.9",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.15.1",
     "xml-js": "^1.6.11"
   }
 }
