--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "react-test-renderer": "^16.13.1",
     "webpack": "^5.99.9",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.1",
-    "xml-js": "^1.6.11"
+    "webpack-dev-server": "^4.15.1"
   }
 }
